--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -4,14 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>100 Hour Project</title>
+
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <nav class="nav">
-        <a href="/" class="nav_link" data-link>Dashboard</a>
-        <a href="/posts" class="nav_link" data-link>Posts</a>
-        <a href="/settings" class="nav_link" data-link>Settings</a>
+        <a href="#" class="nav_link" data-link>Dashboard</a>
+        <a href="#" class="nav_link" data-link>Task Manager</a>
+        <a href="#" class="nav_link" data-link>Settings</a>
     </nav>
+
+    <main>
+        <section>
+            <h1>Task Manager</h1>
+            <form action="/addItem" method="POST">
+                <h3>Task Name</h3>
+                <input type="text" placeholder="Name" name="taskName">
+                <h3>Due Date</h3>
+                <input type="date" placeholder="Task Due" name="taskDate">
+                <h3>Task</h3>
+                <textarea placeholder="Add Task" name="taskTask"></textarea>
+                <input type="submit">
+            </form>
+        </section>
+
+        <section>
+            <h1>Let's Get It Done!</h1>
+                <% for(let i=0; i < info.length; i++) {%>
+                    <div class="currentTasks">
+                        <h3><%= info[i].taskName %></h3>
+                        <h4>Due Date: </h4><span><%= info[i].taskDate %></span>
+                        <h4>Task: </h4><span><%= info[i].taskTask %></span>
+                        <span class='del'>delete</span>
+                    </div>
+                <% } %>
+        </section>
+    </main>
     
 </body>
 </html>
