--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>100 Hour Project</title>
 
+    <script src="https://kit.fontawesome.com/85b6c3303f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <nav class="nav">
-        <a href="#" class="nav_link" data-link>Dashboard</a>
-        <a href="#" class="nav_link" data-link>Task Manager</a>
-        <a href="#" class="nav_link" data-link>Settings</a>
+
     </nav>
 
     <main>
@@ -36,8 +35,7 @@
                         <h3><%= info[i].taskName %></h3>
                         <h4>Due Date: </h4><span><%= info[i].taskDate %></span>
                         <h4>Task: </h4><span><%= info[i].taskTask %></span>
-                        
-                        <span class='del'>delete</span>
+                        <h5>Completed? <span><input type="checkbox"></span></h5>
                     </div>
                 <% } %>
         </section>
